# receipt-to-json

./: CMakeLists.txt  README.md  example.cpp  receipt.cpp  receipt.h
